# FeishuCLassmate

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  fix_port.ps1  index.ts  kill_port.ps1  openclaw.plugin.json  package.json  pnpm-lock.yaml  pytest.ini  start_sidecar.py  test_new_endpoints.py  test_speak.json  test_ws.py  tsconfig.json  tsdown.config.ts  update_config.cjs
backend/: main.py  requirements.txt
backend/api/: auth.py  debug.py  feishu.py  monitoring.py  pipeline.py  robot.py  sessions.py  skill_bank.py  skills.py  websocket.py
backend/db/: database.py  skill_bank.py
backend/models/: schemas.py
backend/services/: auth.py  robot.py  websocket.py
dashboard/: README.md  api.js  index.html  mock-data.js  server.mjs
docs/: GIT_WORKFLOW.md  PDF_COMPLIANCE.md  REPOSITORY_STRUCTURE.md  temi_architecture.md
docs/code_review/: CHECKLIST.md  LINTING.md  README.md  REVIEW_CRITERIA.md  REVIEW_TEMPLATE.md  SAFETY_REQUIREMENTS.md
frontend/css/: style.css
frontend/js/: api-client.js  app.js  config-manager.js  monitoring.js  skill-debugger.js  skill-execution.js  visualization.js
scripts/: curl-examples.md  dev.sh  smoke.sh
skills/conduct-lab-tour/: SKILL.md
skills/daily-standup/: SKILL.md
skills/evolve-telemetry/: SKILL.md
skills/failure-archive/: SKILL.md
skills/idle-research/: SKILL.md
skills/initiate-conversation/: SKILL.md
src/: config.ts
temi-sidecar/: README.md  pyproject.toml  server.py
temi-sidecar/adapters/: temi.py
temi-sidecar/tests/: test_mock_mode.py
tests/: conftest.py  vitest.config.ts
(+197 files in other folders)
