[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feishu-classmate-temi-sidecar"
version = "0.1.0"
description = "HTTP sidecar that wraps the Temi robot WebSocket protocol for the feishu-classmate OpenClaw plugin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",   # required by FastAPI TestClient
]

[tool.hatch.build.targets.wheel]
packages = ["adapters"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
